--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,30 @@ button {
   padding: 0 17px;
 }
 
+@media screen and (min-width: 481px) and (max-width: 767px) {
+  .conteiner {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .conteiner {
+    max-width: 767px;
+    padding: 0;
+  }
+
+  @media screen and (min-width: 1201px) {
+    .conteiner {
+      max-width: 1200px;
+    }
+  }
+  @media screen and (min-width: 1608px) {
+    .conteiner {
+      max-width: 1601px;
+    }
+  }
+}
+
 /* -------------- HEADER -------------- */
 
 .header__logo {
@@ -95,7 +119,6 @@ button {
   max-width: 100%;
   display: block;
 }
-/*---MENU BURGER ---*/
 .header {
   width: 100%;
   position: relative;
@@ -110,7 +133,6 @@ button {
   background-color: var(--header-bg);
   z-index: 2;
 }
-
 .header__body {
   height: 89px;
   position: relative;
@@ -121,8 +143,36 @@ button {
   align-items: center;
 }
 
+/*---MENU BURGER ---*/
 .header__burger {
   display: none;
+}
+.nav-item__btn {
+  position: relative;
+  color: inherit;
+  fill: #b6baab;
+}
+.opened-list.nav-item__btn::before {
+  content: '';
+  position: absolute;
+  width: 100vw;
+  height: 56px;
+  left: -17px;
+  bottom: -14px;
+  background-color: #2d2f29;
+  border-bottom: 1px solid #beff06;
+  z-index: -1;
+}
+.nav-item__btn.opened-list .arrow-down {
+  fill: #beff06;
+}
+.opened-list {
+  color: #beff06;
+}
+.nav-item__list {
+  max-height: 0;
+  overflow: hidden;
+  transition: all 250ms var(--timming);
 }
 
 @media screen and (max-width: 767px) {
@@ -194,73 +244,39 @@ button {
   .header__menu.active {
     top: 0;
   }
+  .header__list li:not(:last-child) {
+    margin-bottom: 24px;
+  }
+  .header__list {
+    margin-bottom: 40px;
+    font-size: 18px;
+  }
+  .socials-list.mob-menu {
+    justify-content: flex-start;
+  }
+  .nav-item__list a {
+    display: block;
+  }
+  .nav-item__list a:not(:last-child) {
+    margin-bottom: 18px;
+  }
+
+  .nav-item__list a:last-child {
+    padding-bottom: 24px;
+  }
+  .nav-item__btn.opened-list {
+    margin-bottom: 27px;
+  }
+  .arrow-down {
+    display: inline-block;
+    margin-left: 10px;
+    fill: #2d2f29;
+  }
+  .nav-item__btn.opened-list + .nav-item__list {
+    border-bottom: 1px solid #d6dec5;
+  }
 }
 
-.header__list li:not(:last-child) {
-  margin-bottom: 24px;
-}
-.header__list {
-  margin-bottom: 40px;
-  font-size: 18px;
-}
-.socials-list.mob-menu {
-  justify-content: flex-start;
-}
-.heder__link {
-}
-.nav-item__btn {
-  position: relative;
-  padding-right: 220px;
-}
-.nav-item__btn.opened-list {
-  margin-bottom: 27px;
-}
-
-.opened-list.nav-item__btn::before {
-  content: '';
-  position: absolute;
-  width: 100vw;
-  height: 56px;
-  left: -17px;
-  bottom: -14px;
-  background-color: #2d2f29;
-  border-bottom: 1px solid #beff06;
-  z-index: -1;
-}
-
-.arrow-down {
-  display: inline-block;
-  margin-left: 10px;
-  fill: #2d2f29;
-}
-
-.nav-item__btn.opened-list .arrow-down {
-  fill: #beff06;
-}
-
-.nav-item__list a {
-  display: block;
-}
-.nav-item__list a:not(:last-child) {
-  margin-bottom: 18px;
-}
-.nav-item__list {
-  max-height: 0;
-  overflow: hidden;
-  transition: all 250ms var(--timming);
-
-  /* margin-top: 27px; */
-}
-.nav-item__list a:last-child {
-  padding-bottom: 24px;
-}
-.nav-item__btn.opened-list + .nav-item__list {
-  /* border: -1px; */
-  border-bottom: 1px solid #d6dec5;
-}
-.opened-list {
-  color: #beff06;
-}
 /* -------------- HERO -------------- */
 
 .hero {
@@ -292,6 +308,27 @@ button {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 768px) and (min-resolution: 192dpi),
+  screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero@2x.jpg);
+  }
+}
+
 .hero__text-top {
   font-family: 'TT Firs Neue Bold';
 
@@ -302,7 +339,6 @@ button {
   color: var(--accent-color);
   margin-bottom: 21px;
 }
-
 .hero__text-second {
   font-family: 'TT Firs Neue Bold';
   color: var(--white-color);
@@ -311,51 +347,12 @@ button {
   line-height: 1.11;
   margin-bottom: 30px;
 }
-
 .hero__text {
   font-size: 12px;
   line-height: 1.25;
 }
-/*
-.hero {
-  padding: 118px 0;
-  text-align: center;
-  max-width: 1600px;
-  margin: 0 auto;
-  background-color: var(--hero-bg-color);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/bg-img-mob.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 
-  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/bg-img-mob@2x.jpg);
-  }
-
-  @media screen and (min-width: 768px) {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/bg-img-tab.jpg);
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/bg-img-tab@2x.jpg);
-    }
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding: 200px 0;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/bg-img.jpg);
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/bg-img@2x.jpg);
-    }
-  }
-}
-*/
-
-/* -------------- OFFERS -------------- */
+/* -------------- OFFERS SECTION-------------- */
 
 .offers-section {
   padding-top: 78px;
@@ -364,7 +361,6 @@ button {
   padding-bottom: 45px;
 }
 .age-limit {
-  position: absolute;
   top: 30px;
   left: 17px;
   display: flex;
@@ -386,6 +382,16 @@ button {
   font-size: 14px;
   line-height: 1.29;
 }
+@media screen and (max-width: 767px) {
+  .age-limit {
+    position: absolute;
+  }
+  .sort-btn {
+    width: 78px;
+  }
+}
+
+/* -------------- OFFERS PART sort buttons-------------- */
 .sort-list-wrap {
   background-color: var(--section-title-bg);
 
@@ -401,7 +407,7 @@ button {
   display: flex;
   align-items: center;
   gap: 6px;
-  width: 78px;
+
   text-align: start;
   font-size: 12px;
   color: var(--black-color);
@@ -418,13 +424,13 @@ button {
 .bonus-ico {
   width: 22px;
 }
-
 .offers__block {
   display: flex;
   gap: 23px;
   overflow-x: scroll;
 }
 
+/* -------------- OFFERS PART cards -------------- */
 .offer-card-wrap {
   width: 356px;
   position: relative;
@@ -449,22 +455,15 @@ button {
   background: linear-gradient(93.74deg, #faa13a 0%, #e6800a 101.04%);
   border-radius: 4px;
 }
-.offer-logo {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  display: inline-block;
-  margin-left: auto;
+.blue-flag {
+  background: linear-gradient(93.74deg, #4d6aec 0%, #60b7eb 101.04%);
 }
-
 .block-wrap {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  margin-bottom: 47px;
 }
 .block {
-  width: 149px;
   font-family: 'TT Firs Neue';
   font-weight: 600;
 }
@@ -505,7 +504,6 @@ button {
   display: flex;
   gap: 9px;
 }
-
 .block-three {
   line-height: 1.31;
   font-size: 16px;
@@ -538,13 +536,6 @@ button {
   line-height: 1.28;
   color: #949494;
 }
-.block-four {
-}
-.block-bonus-card {
-  border: 1.5px solid #e6a10e;
-  border-radius: 7.6px;
-  padding: 12px 12px 15px 16px;
-}
 .bonus-price {
   font-family: 'TT Firs Neue Bold';
   font-size: 18px;
@@ -565,7 +556,7 @@ button {
   gap: 3px;
   align-items: center;
 }
-/*---*/
+/*--- buttons - -*/
 .buttons {
   display: flex;
   justify-content: space-evenly;
@@ -589,7 +580,6 @@ button {
 .analise {
   background-color: #acada7;
 }
-
 .offers-nav-buttons {
   margin-top: 21px;
   display: flex;
@@ -610,6 +600,7 @@ button {
   fill: #acada7;
 }
 
+/* -------------- OFFERS PART notes -------------- */
 .notes {
   margin-top: 45px;
   background-color: #f1f1f1;
@@ -620,12 +611,11 @@ button {
 .notes-wrap {
   padding: 27px 18px;
 }
-.notes-wrap .notes-item:not(:last-child) {
-  margin-bottom: 20px;
-}
+
 .notes-item {
   display: flex;
   font-size: 16px;
+  line-height: 1.2;
   gap: 5px;
 }
 .deposit-options {
@@ -674,12 +664,37 @@ button {
   font-family: 'TT Firs Neue Bold';
   font-size: 22px;
   line-height: 1.1;
+  padding: 0 60px;
 }
 .section-title__part {
   color: #6bba25;
 }
 
-/* -------------- INFORMATION -------------- */
+@media screen and (max-width: 767px) {
+  .offer-logo {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    display: inline-block;
+    margin-left: auto;
+  }
+  .block-wrap {
+    margin-bottom: 47px;
+  }
+  .block {
+    width: 149px;
+  }
+  .block-bonus-card {
+    border: 1.5px solid #e6a10e;
+    border-radius: 7.6px;
+    padding: 12px 12px 15px 16px;
+  }
+  .notes-wrap .notes-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+/* -------------- NEWS INFORMATION -------------- -------------- */
 .information-section {
   background-color: var(--section-title-bg);
   padding-top: 43px;
@@ -697,6 +712,12 @@ button {
   letter-spacing: 0.02em;
   color: #54544d;
 }
+.news-post__wrap {
+  display: flex;
+  gap: 13.4px;
+  overflow: auto;
+}
+
 .news-img {
   border-radius: 6px;
 }
@@ -725,6 +746,17 @@ button {
   fill: #949494;
 }
 
+@media screen and (max-width: 767px) {
+  .footer-links__item {
+    width: 160px;
+  }
+  .footer-links .footer-links__item:last-child {
+    width: 190px;
+  }
+}
+.news-post__wrap div {
+  flex: 0 0 390px;
+}
 /* -------------- BETS -------------- */
 .bets-wrap {
   text-align: center;
@@ -756,7 +788,7 @@ button {
 .offer-cards__block {
   margin-top: 45px;
   display: flex;
-  gap: 23px;
+  gap: 21px;
   overflow-x: scroll;
 }
 .offer-cards__block::-webkit-scrollbar {
@@ -810,7 +842,6 @@ button {
 .rewiew {
   opacity: 0.5;
 }
-
 .offer-card__btn {
   margin-top: 16px;
   width: 243px;
@@ -828,7 +859,6 @@ button {
   color: #121212;
   text-align: center;
 }
-
 .caesars {
   background-color: #163131;
 }
@@ -849,6 +879,7 @@ button {
 .partycasino {
   background-color: #1f154e;
 }
+
 /*---------------- FOOTER ------------*/
 
 .footer {
@@ -856,41 +887,28 @@ button {
   padding-top: 40px;
   padding-bottom: 72px;
 }
-.footer-main {
-  /* text-align: center; */
-}
-
 .logo__footer {
   display: block;
   margin: 0 auto;
   margin-bottom: 30px;
-}
-.socials {
 }
 .socials-list {
   justify-content: center;
   display: flex;
   gap: 10px;
 }
-
 .footer-links {
   margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
   gap: 28px;
 }
-
 .footer-links__item {
   text-align: start;
-  width: 160px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
 }
-.footer-links .footer-links__item:last-child {
-  width: 190px;
-}
-
 .company-links * a {
   text-align: left;
 }
@@ -938,4 +956,389 @@ button {
   align-items: center;
   justify-content: space-between;
   gap: 14px;
+}
+
+/* ------------- DEVICES part ------------*/
+
+@media screen and (min-width: 768px) {
+  .section-title__text br {
+    display: none;
+  }
+  /* ---------- HEDER & HERO----------*/
+
+  .header__body {
+    height: 80px;
+  }
+  .socials.header-item {
+    display: none;
+  }
+  .header__body {
+    justify-content: space-between;
+  }
+  .header__logo {
+    flex: 0 0 90px;
+  }
+  .header__list {
+    position: relative;
+    z-index: 3;
+    display: flex;
+    gap: 14px;
+    font-size: 11px;
+    line-height: 1.27;
+    text-transform: uppercase;
+
+    color: #b6baab;
+  }
+  .nav-item__list {
+    position: absolute;
+    right: 30px;
+    top: 47px;
+    display: flex;
+    flex-direction: column;
+    color: #2d2f29;
+    background-color: #b6baab;
+  }
+  .nav-item__list a {
+    padding: 20px;
+  }
+  .opened-list.nav-item__btn::before {
+    width: 85px;
+    height: 80px;
+    top: -34px;
+    left: -8px;
+    background-color: #171816;
+    border-bottom: 1px solid #beff06;
+    z-index: -1;
+  }
+
+  .hero {
+    padding: 50px 0px 60px 70px;
+  }
+  .hero__text-top {
+    font-weight: 700;
+    font-size: 30px;
+  }
+  .hero__text-second {
+    font-weight: 600;
+    font-size: 20px;
+  }
+  .hero__text {
+    font-size: 10px;
+    line-height: 1.31;
+  }
+
+  @media screen and (min-width: 1201px) {
+    .header__logo {
+      flex: 0 0 129px;
+    }
+    .header__body {
+      height: 124px;
+    }
+    .header__list {
+      gap: 30px;
+      font-size: 15px;
+    }
+    .opened-list.nav-item__btn::before {
+      width: 117px;
+      height: 124px;
+      top: -54px;
+      left: -15px;
+    }
+    .nav-item__list {
+      top: 72px;
+    }
+    .hero {
+      padding: 90px 0 120px 110px;
+    }
+    .hero__text-top {
+      font-weight: 700;
+      font-size: 35px;
+    }
+    .hero__text-second {
+      font-weight: 600;
+      font-size: 30px;
+    }
+    .hero__text {
+      font-size: 13px;
+      line-height: 1.31;
+    }
+  }
+  @media screen and (min-width: 1608px) {
+    .header__list {
+      gap: 60px;
+    }
+    .hero {
+      padding: 163px 0 174px 355px;
+    }
+    .hero__text-top {
+      font-weight: 700;
+      font-size: 60px;
+    }
+    .hero__text-second {
+      font-weight: 600;
+      font-size: 55px;
+    }
+    .hero__text {
+      font-size: 16px;
+      line-height: 1.31;
+    }
+  }
+
+  /* ---------- OFFERS section ----------*/
+  .offers-section {
+    padding-top: 50px;
+  }
+  .sort-list-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 21px 25px 21px 25px;
+    margin-bottom: 30px;
+  }
+  .sort-list {
+    gap: 25px;
+  }
+
+  /* ---------- OFFERS section BLOCK----------*/
+  .offers__block {
+    display: block;
+  }
+  .offers__block > div:not(:last-child) {
+    margin-bottom: 14px;
+  }
+  .offer-card-wrap {
+    width: 100%;
+    display: flex;
+    gap: 18px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 24px 44px 24px 33px;
+  }
+  .offer-logo {
+    flex: 0 0 120px;
+  }
+  .buttons {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .block-wrap {
+    gap: 5px;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .payments-wrap {
+    width: 80%;
+  }
+  .offers-nav-buttons {
+    display: none;
+  }
+  .block-one {
+    border-right: none;
+    padding-right: 15px;
+  }
+  .block-two {
+    padding-right: 15px;
+  }
+  .block-three {
+    align-items: center;
+    padding-right: 15px;
+    width: 195px;
+    border-right: none;
+  }
+  .block-bonus-card {
+    border: 2px solid #e6a10e;
+    border-radius: 7.6px;
+    padding: 15px 28px 31px 24px;
+  }
+  .bonus-price {
+    font-size: 18px;
+  }
+  .get-link {
+    font-size: 18px;
+  }
+
+  @media screen and (min-width: 1201px) {
+    .sort-list-wrap {
+      padding: 21px 76px 21px 40px;
+    }
+    .sort-list {
+      gap: 108px;
+    }
+    .offer-card-wrap {
+      padding: 24px 44px 24px 33px;
+    }
+    .block-wrap {
+      flex-wrap: nowrap;
+      gap: 28px;
+    }
+    .block-one {
+      padding-right: 30px;
+      border-right: 1px solid #e0e0e0;
+    }
+    .block-two {
+      padding-right: 30px;
+      border-right: 1px solid #e0e0e0;
+    }
+    .block-three {
+      padding-right: 30px;
+    }
+    .payments-wrap {
+      width: 90%;
+    }
+  }
+
+  @media screen and (min-width: 1608px) {
+    .block-wrap {
+      gap: 58px;
+    }
+    .offer-card-wrap {
+      padding: 24px 44px 24px 33px;
+    }
+    .block-one {
+      padding-right: 79px;
+    }
+    .block-two {
+      padding-right: 111px;
+      border-right: 1px solid #e0e0e0;
+    }
+    .payments-wrap {
+      width: 90%;
+    }
+  }
+
+  /*----notes----*/
+  .notes {
+    margin-top: 50px;
+  }
+  .section-title__text {
+    font-size: 40px;
+  }
+  .notes-wrap {
+    padding: 80px 40px 50px 23px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: space-between;
+    gap: 20px;
+    height: 350px;
+  }
+  .notes-item {
+    font-size: 18px;
+    gap: 13.5px;
+  }
+  /* ---------- ??? footer and next ----------*/
+  .bets-wrap {
+    text-align: center;
+    padding-top: 68px;
+    padding-bottom: 87px;
+    padding-left: 100px;
+    padding-right: 166px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 630px;
+    gap: 110px;
+  }
+  .bets-item__title {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+  }
+  .item-text {
+    font-weight: 400;
+    font-size: 20px;
+    margin-top: 20px;
+    text-align: left;
+  }
+  .item-title {
+    font-size: 30px;
+    margin: 0;
+  }
+  .bets-wrap .bets-item:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .bets-item__title svg {
+    width: 13%;
+    height: 13%;
+  }
+  .item-text {
+    display: block;
+  }
+  .deposit-options {
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
+  .dep-title {
+    margin-bottom: 25px;
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 1.27;
+  }
+  .dep-text {
+    height: 100px;
+    overflow-y: scroll;
+    width: 600px;
+    color: #54544d;
+    font-size: 16px;
+    line-height: 1.3;
+  }
+  .under-footer {
+    padding-top: 40px;
+  }
+  .main-part {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .footer-logos {
+    display: inline-block;
+  }
+  .logo__footer {
+    margin: 0 0 30px 0;
+  }
+  .company-list__part {
+    font-size: 22px;
+  }
+  .company-list {
+    font-size: 18px;
+  }
+  .footer-links {
+    justify-content: space-between;
+  }
+  .footer-notes {
+    margin-top: 127px;
+  }
+  .rights {
+    font-size: 16px;
+  }
+  .footer-notes__text {
+    font-size: 14px;
+
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+
+  @media screen and (min-width: 1201px) {
+    .dep-text {
+      width: 1000px;
+    }
+    .notes-wrap {
+      padding: 71px 150px 60px 153px;
+      gap: 20px;
+      height: 420px;
+    }
+    .notes-item {
+      font-size: 20px;
+      gap: 13.5px;
+    }
+  }
+  @media screen and (min-width: 1608px) {
+    .dep-text {
+      width: 1160px;
+    }
+    .notes-wrap {
+      padding: 71px 250px 90px 253px;
+      gap: 20px;
+      height: 450px;
+    }
+  }
 }
