--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
   --footer-text: #6e716a;
 
   --btn-focused: #b0ee04;
+  --btn-hovered: #4f9c0b;
   --timming: cubic-bezier(0.4, 0, 0.2, 1);
 }
 html {
@@ -145,7 +146,24 @@ input {
   padding-bottom: 30px;
   align-items: center;
 }
-
+.header__link {
+  transition: all 250ms var(--timming);
+}
+.header__link:hover {
+  color: var(--accent-color);
+}
+.nav-item__btn:hover {
+  color: var(--accent-color);
+}
+.nav-item__btn:hover > .arrow-down {
+  fill: var(--accent-color);
+}
+.nav-item__list a:hover {
+  color: var(--accent-color);
+}
+.nav-item__list a {
+  transition: all 250ms var(--timming);
+}
 /*---MENU BURGER ---*/
 .header__burger {
   display: none;
@@ -154,6 +172,7 @@ input {
   position: relative;
   color: inherit;
   fill: #b6baab;
+  transition: all 250ms var(--timming);
 }
 .opened-list.nav-item__btn::before {
   content: '';
@@ -254,6 +273,7 @@ input {
     margin-bottom: 40px;
     font-size: 18px;
   }
+
   .socials-list.mob-menu {
     justify-content: flex-start;
   }
@@ -430,7 +450,7 @@ input {
 .offers__block {
   display: flex;
   gap: 23px;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 /* -------------- OFFERS PART cards -------------- */
@@ -576,6 +596,10 @@ input {
   line-height: 1.28;
   font-weight: 600;
   color: #f2f0f0;
+  transition: all 250ms var(--timming);
+}
+.offer-btn:hover {
+  background-color: var(--btn-hovered);
 }
 .arbir {
   background-color: #6bba25;
@@ -641,16 +665,18 @@ input {
   font-size: 14px;
   line-height: 1.3;
 }
-.dep-text::-webkit-scrollbar {
+
+.scroll::-webkit-scrollbar {
   width: 3px;
+  height: 8px;
 }
 
-.dep-text::-webkit-scrollbar-track {
+.scroll::-webkit-scrollbar-track {
   background-color: rgba(148, 148, 148, 0.62);
   border: 1px solid #e4e4e4;
 }
 
-.dep-text::-webkit-scrollbar-thumb {
+.scroll::-webkit-scrollbar-thumb {
   width: 3px;
   background-color: #6bba25;
   border-radius: 1px;
@@ -717,6 +743,10 @@ input {
   line-height: 1.28;
   letter-spacing: 0.02em;
   color: #54544d;
+  transition: all 250ms var(--timming);
+}
+.news-link:hover {
+  color: var(--btn-hovered);
 }
 .news-post__wrap {
   display: flex;
@@ -748,9 +778,17 @@ input {
   display: flex;
   align-items: center;
   gap: 3px;
+  transition: all 250ms var(--timming);
+}
+.news-btn-more:hover {
+  border-color: var(--btn-hovered);
+  color: var(--btn-hovered);
 }
 .news-btn-more svg {
   fill: #949494;
+}
+.news-btn-more:hover svg {
+  fill: var(--btn-hovered);
 }
 
 @media screen and (max-width: 767px) {
@@ -796,7 +834,7 @@ input {
   margin-top: 45px;
   display: flex;
   gap: 21px;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 .deposit-offer-card {
   width: 305px;
@@ -838,6 +876,11 @@ input {
   line-height: 1.25;
   border: 1px solid #ffffff;
   color: #ffffff;
+  transition: all 250ms var(--timming);
+}
+.card__btn:hover {
+  border-color: var(--btn-hovered);
+  color: var(--btn-hovered);
 }
 .terms {
   opacity: 1;
@@ -861,6 +904,10 @@ input {
 
   color: #121212;
   text-align: center;
+  transition: all 250ms var(--timming);
+}
+.offer-card__btn:hover {
+  background-color: var(--btn-hovered);
 }
 .caesars {
   background-color: #163131;
@@ -900,6 +947,12 @@ input {
   display: flex;
   gap: 10px;
 }
+.soc-link {
+  transition: all 250ms var(--timming);
+}
+.soc-link:hover {
+  transform: scale(1.1);
+}
 .footer-links {
   margin-top: 40px;
   display: flex;
@@ -921,6 +974,13 @@ input {
   display: flex;
   flex-direction: column;
   gap: 12px;
+  transition: all 250ms var(--timming);
+}
+.company-list a {
+  transition: all 250ms var(--timming);
+}
+.company-list a:hover {
+  color: var(--btn-hovered);
 }
 .company-list__part {
   margin-bottom: 16px;
@@ -1407,6 +1467,11 @@ input {
   line-height: 1.1;
   color: #121212;
   border: 1px solid #6e716a;
+  transition: all 250ms var(--timming);
+}
+.user__btn:hover {
+  color: var(--btn-hovered);
+  border-color: var(--btn-hovered);
 }
 
 @media screen and (max-width: 767px) {
@@ -1619,6 +1684,7 @@ input {
 }
 .navigate-buttons__item:hover {
   color: #6bba25;
+  border-color: var(--btn-hovered);
 }
 /*------content-left-side -------*/
 .content-left-side {
@@ -1850,6 +1916,14 @@ input {
 
   font-size: 22px;
   color: #f2f0f0;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+  transition: all 250ms var(--timming);
+}
+.form_submit-btn:hover {
+  background-color: var(--btn-hovered);
 }
 .user-feedback__title {
   font-style: 22px;
@@ -1917,6 +1991,8 @@ input {
   }
   .input__field {
     margin-top: 20px;
+    padding-left: 20px;
+    font-size: 26px;
   }
   .inp-coment {
     margin-bottom: 20px;
@@ -2227,6 +2303,11 @@ input {
   background: rgba(241, 241, 241, 0.45);
   border: 1px solid #6e716a;
   border-radius: 4.6px;
+  transition: all 250ms var(--timming);
+}
+.folower__link:hover {
+  color: var(--btn-hovered);
+  border-color: var(--btn-hovered);
 }
 .pa-folower__link {
   width: 160px;
@@ -2288,7 +2369,17 @@ input {
   padding: 12px 0;
   border-bottom: 1px solid rgba(176, 193, 171, 0.73);
 }
-
+.faq-item {
+  max-height: 0;
+  overflow: hidden;
+  transition: all 250ms var(--timming);
+}
+.faq-open__btn svg {
+  transition: all 250ms var(--timming);
+}
+.faq-open__btn.opened-faq-list svg {
+  transform: rotate(180deg);
+}
 @media screen and (max-width: 767px) {
   .faq-open__btn svg {
     width: 18.75px;
